# nodalkit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  LICENSE  README.md  justfile  meson.build
.github/workflows/: ci.yml
ci/: windows-i686-clang.ini
docs/: ACCESSIBILITY_CHECKLIST.md  BUILDING_APPLICATIONS.md  DIAGNOSTICS.md  EMULATOR_FRONTEND.md  MESON_INTEGRATION.md  NATIVE_INTEROP.md  PROCESS_LAUNCH.md  WINDOWS_SUPPORT.md
examples/: accessibility_probe.cpp  counter.cpp  hello_world.cpp  long_task.cpp  meson.build  process_launch.cpp  showcase.cpp
examples/showcase/: main.cpp  showcase_app.cpp  showcase_app.h  showcase_pattern.cpp  showcase_pattern.h  showcase_profile.cpp  showcase_profile.h  showcase_widgets.h
include/nk/accessibility/: accessible.h  atspi_bridge.h  role.h
include/nk/actions/: action.h  shortcut.h
include/nk/animation/: easing.h  timed_animation.h
include/nk/controllers/: event_controller.h
include/nk/debug/: diagnostics.h
include/nk/foundation/: logging.h  property.h  result.h  service_locator.h  signal.h  types.h
include/nk/layout/: box_layout.h  breakpoint.h  constraints.h  grid_layout.h  layout_manager.h  stack_layout.h
include/nk/model/: abstract_list_model.h  abstract_table_model.h  abstract_tree_model.h  list_model_adapters.h  selection_model.h  settings.h  state_store.h  tree_model.h
include/nk/platform/: application.h  drag_drop.h  events.h  file_dialog.h  key_codes.h  native_menu.h  native_toolbar.h  platform_backend.h  spell_checker.h  system_preferences.h  window.h  window_inspector.h  windows_interop.h
include/nk/render/: clip_stack.h  image_node.h  render_node.h  renderer.h  snapshot_context.h
include/nk/runtime/: event_loop.h
include/nk/style/: gtk_palette.h  style_class.h  theme.h  theme_defaults.h  theme_selection.h
include/nk/text/: font.h  shaped_text.h  text_shaper.h
include/nk/ui_core/: cursor_shape.h  state_flags.h  widget.h
include/nk/widgets/: avatar.h  badge.h  banner.h  breadcrumb.h  button.h  calendar.h  canvas_widget.h  check_box.h  clamp.h  color_well.h  combo_box.h  command_palette.h  context_menu.h  data_table.h  dialog.h  expander.h  grid_view.h  headerbar.h  image_view.h  info_bar.h  label.h  list_view.h  log_view.h  menu_bar.h  navigation_split_view.h  overlay_split_view.h  popover.h  preferences.h  progress_bar.h  radio_button.h  scroll_area.h  search_field.h  segmented_control.h  slider.h  (+16 more)
packaging/archlinux/: PKGBUILD
packaging/meson/: nodalkit.wrap
src/accessibility/: accessible.cpp  atspi_bridge.cpp
src/actions/: action.cpp
src/animation/: easing.cpp  timed_animation.cpp
src/controllers/: event_controller.cpp
src/debug/: diagnostics.cpp
src/foundation/: logging.cpp  service_locator.cpp  signal.cpp
src/layout/: box_layout.cpp  breakpoint.cpp  grid_layout.cpp  layout_manager.cpp  stack_layout.cpp
src/model/: abstract_list_model.cpp  abstract_table_model.cpp  abstract_tree_model.cpp  list_model_adapters.cpp  selection_model.cpp  settings.cpp  tree_model.cpp
src/platform/: application.cpp  drag_drop.cpp  platform_backend.cpp  system_preferences.cpp  window.cpp  window_inspector.cpp
src/render/: clip_stack.cpp  d3d11_renderer.cpp  image_node.cpp  metal_renderer.mm  render_node.cpp  renderer.cpp  snapshot_context.cpp  vulkan_renderer.cpp
src/runtime/: event_loop.cpp
src/style/: gtk_palette.cpp  theme.cpp  theme_selection.cpp
src/text/: shaped_text.cpp  text_shaper.cpp
src/ui_core/: widget.cpp
src/widgets/: avatar.cpp  badge.cpp  banner.cpp  breadcrumb.cpp  button.cpp  calendar.cpp  canvas_widget.cpp  check_box.cpp  clamp.cpp  color_well.cpp  combo_box.cpp  command_palette.cpp  context_menu.cpp  data_table.cpp  dialog.cpp  expander.cpp  grid_view.cpp  headerbar.cpp  image_view.cpp  info_bar.cpp  label.cpp  list_view.cpp  log_view.cpp  menu_bar.cpp  navigation_split_view.cpp  overlay_split_view.cpp  popover.cpp  preferences.cpp  progress_bar.cpp  radio_button.cpp  scroll_area.cpp  search_field.cpp  segmented_control.cpp  separator.cpp  slider.cpp  spin_button.cpp  spinner.cpp  split_view.cpp  status_bar.cpp  status_page.cpp  (+10 more)
tests/: basic_app_test.cpp  drag_drop_test.cpp  editor_scale_validation_test.cpp  log_view_test.cpp  lsan_suppressions.txt  meson.build  model_test.cpp  property_test.cpp  renderer_test.cpp  service_locator_test.cpp  settings_test.cpp  showcase_navigation_test.cpp  signal_test.cpp  state_store_test.cpp  text_shaper_test.cpp  theme_test.cpp  wayland_portal_contract_test.cpp  widget_controls_test.cpp  widget_views_test.cpp
tests/fixtures/: atspi_widget_debug_fixture.json  frame_diag_baseline.json  frame_diag_candidate_bad.json  frame_diag_candidate_ok.json  stable_animation_heavy_frame_diagnostics.json  stable_animation_heavy_trace.json  stable_list_heavy_frame_diagnostics.json  stable_list_heavy_trace.json  stable_localized_redraw_frame_diagnostics.json  stable_localized_redraw_trace.json  stable_metal_localized_redraw_frame_diagnostics.json  stable_metal_localized_redraw_trace.json  stable_mixed_frame_diagnostics.json  stable_mixed_trace.json  stable_text_heavy_frame_diagnostics.json  stable_text_heavy_trace.json  stable_win32_animation_heavy_frame_diagnostics.json  stable_win32_animation_heavy_trace.json  stable_win32_list_heavy_frame_diagnostics.json  stable_win32_list_heavy_trace.json  stable_win32_text_heavy_frame_diagnostics.json  stable_win32_text_heavy_trace.json  trace_baseline.json  trace_candidate_bad.json  trace_candidate_ok.json  widget_debug_fixture.json
tests/fixtures/debug_bundle_fixture/: frame_diagnostics.json  frame_trace.json  manifest.json  render_snapshot.json  screenshot.ppm  selected_frame_summary.txt  selected_widget.json  widget_tree.json  widget_tree.txt
tests/install_smoke/: main.cpp  meson.build
tests/public_api_audit/: main.cpp
tools/: atspi_snapshot_view.cpp  debug_bundle_view.cpp  frame_diag_diff.cpp  frame_diag_view.cpp  meson.build  overlay_screenshot_harness.cpp  render_snapshot_view.cpp  run_install_smoke.py  trace_capture_harness.cpp  trace_diff.cpp  trace_view.cpp  widget_debug_view.cpp
(+28 files in other folders)
