executable('hello_world',
    'hello_world.cpp',
    dependencies : nk_dep,
)

executable('counter',
    'counter.cpp',
    dependencies : nk_dep,
)

executable('accessibility_probe',
    'accessibility_probe.cpp',
    dependencies : nk_dep,
)

executable('showcase',
    [
        'showcase/main.cpp',
        'showcase/showcase_app.cpp',
        'showcase/showcase_pattern.cpp',
        'showcase/showcase_profile.cpp',
    ],
    dependencies : nk_dep,
)
